--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Preconnect to external origins used at startup -->
+<link rel="preconnect" href="https://api.mapbox.com" />
+<link rel="preconnect" href="https://events.mapbox.com" />
+<link rel="preconnect" href="https://images.unsplash.com" />
+<link rel="preconnect" href="https://raw.githubusercontent.com" />
+<link rel="dns-prefetch" href="https://trekmind-globe-app.pages.dev" />
+
+<!-- Open Graph / SEO defaults (per-trek pages should override these via Helmet) -->
+<meta property="og:site_name" content="TrekMind" />
+<meta property="og:type" content="website" />
+<meta name="theme-color" content="#0f172a" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <link rel="icon" type="image/png" href="/favicon.png" />
