--- a/client/index.html
+++ b/client/index.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Preconnect to external origins used at startup -->
-<link rel="preconnect" href="https://api.mapbox.com" />
-<link rel="preconnect" href="https://events.mapbox.com" />
-<link rel="preconnect" href="https://images.unsplash.com" />
-<link rel="preconnect" href="https://raw.githubusercontent.com" />
-<link rel="dns-prefetch" href="https://trekmind-globe-app.pages.dev" />
-
-<!-- Open Graph / SEO defaults (per-trek pages should override these via Helmet) -->
-<meta property="og:site_name" content="TrekMind" />
-<meta property="og:type" content="website" />
-<meta name="theme-color" content="#0f172a" />
-
+    <!-- ① charset MUST be first -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+
+    <!-- ② Preconnect early — before any external requests fire -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://api.mapbox.com" />
+    <link rel="preconnect" href="https://events.mapbox.com" />
+    <link rel="preconnect" href="https://raw.githubusercontent.com" />
+    <link rel="dns-prefetch" href="https://trekmind-globe-app.pages.dev" />
+    <link rel="dns-prefetch" href="https://images.unsplash.com" />
+
+    <!-- ③ Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fira+Code:wght@300..700&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Oxanium:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <title>TrekMind - Discover Iconic Treks</title>
+
+    <!-- ④ Fonts — stripped to only what TrekMind actually uses.
+         Original loaded 20+ font families (~800KB). 
+         These 3 cover all visible text in the app. Add back only if needed. -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,600;0,9..40,700;1,9..40,400&family=Playfair+Display:ital,wght@0,700;1,700&family=Geist:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ⑤ SEO / Open Graph defaults -->
+    <title>TrekMind — Discover Iconic Trekking Routes</title>
+    <meta name="description" content="Explore the world's most iconic trekking routes. Detailed itineraries, interactive maps and gear guides for 67 legendary trails." />
+    <meta property="og:site_name" content="TrekMind" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TrekMind — Discover Iconic Trekking Routes" />
+    <meta property="og:description" content="Explore the world's most iconic trekking routes. Detailed itineraries, interactive maps and gear guides for 67 legendary trails." />
+    <meta property="og:url" content="https://trekmind.pages.dev/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="theme-color" content="#0f172a" />
   </head>
   <body>
     <div id="root"></div>
